# Project-Chimera-The-Agentic-Infrastructure-Challenge

./: .coderabbit.yaml  Dockerfile  Makefile  README.MD  pyproject.toml
.cursor/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: unittests.yml
Data/: Project Chimera SRS Document_ Autonomous Influencer Network.docx  Project_Chimera_3Day_Challenge.md.docx
Data/extracted/: Project Chimera SRS Document_ Autonomous Influencer Network.txt  Project_Chimera_3Day_Challenge.md.txt
Report/: Day1_Submission_Report.md
research/: architecture_strategy.md  mcp_connection_log.md  research_notes.md  tooling_strategy.md
scripts/: extract_docx.py
skills/: README.MD
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
