[project]
name = "chimera"
version = "0.1.0"
description = "Autonomous AI Influencer Network - Project Chimera"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []  # â† no runtime deps yet (MCP, pydantic, etc. come later)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Optional but recommended: tells uv to manage the project
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"